# quant-notebooks

./: .gitignore  README.md  b3_index_composition.py  index.html  pyproject.toml  yfinance_guide.py
.github/workflows/: export_html.yml
data/: IBOVDIA.XLS  bacen_code_list.parquet
data/ibov composition/: 2025-09-02.csv  2025-09-02.parquet
data/imat composition/: 2025-09-02.csv  2025-09-02.parquet
data/sensitivity_brl/2025-09-03/: brl_sensitivity.xlsx  estatisticas_gerais.csv  rank_beneficiadas_top10.csv  rank_prejudicadas_top10.csv
notebooks/data extractor/: yfinance_guide.html
notebooks/data visualization/: b3_index_composition.html
notebooks/data_extractor/: yfinance_guide.html
notebooks/data_visualization/: b3_index_composition.html
notebooks/macroeconomics/: br_core_inflation.html  br_core_inflation.py
notebooks/projects/: brl_sensitivity.py  ibov_por_governo.html  ibov_por_governo.py  rrg.html  rrg.py
notebooks/technical_indicators/: stocks_momentum.html
